k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slowbooks
  namespace: slowbooks
spec:
  type: ClusterIP
  selector:
    app: slowbooks
  ports:
    - name: http
      port: 80
      targetPort: http
